Fixed contrast compatibility for older browsers

--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,7 @@ header nav ul li {
 
 header nav ul li a {
   border-top: 4px solid rgb(0, 0, 0);
-  border-top: 4px solid rgba(0, 0, 0, 0); /* I tried using transparent, but it kept just removing the border*/
+  border-top: 4px solid rgba(0, 0, 0, 0); /*I tried using transparent, but it kept just removing the border*/
   display: inline-block;
   padding-top: 1em;
   padding-bottom: 0.5em;
@@ -103,17 +103,17 @@ thead th,
 tbody th,
 tfoot th,
 tfoot td {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   background-color: rgba(0, 0, 0, 0.2);
 }
 
 td {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   background-color: rgba(0, 0, 0, 0.05);
 }
 
 tbody tr:nth-of-type(even) td {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   background-color: rgba(0, 0, 0, 0.15);
 }
 
